change btn styles

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <title>Vite App</title>
+    <title>سامانه جامع و یکپارچه فام
+    </title>
   </head>
   <body>
     <div id="app"></div>
